[metadata]
name = zfs-encrypt-creator
version = 0.0.1
author = NlightN
author_email = oncharterliz@gmail.com
description = Helper utility for create encrypted zfs pool
long_description = file: readme.md, license.txt
long_description_content_type = text/markdown
url = https://github.com/NlightN22/zfs-encrypt-creator
project_urls =
    Bug Tracker = https://github.com/NlightN22/zfs-encrypt-creator/issues
    repository = https://github.com/NlightN22/zfs-encrypt-creator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zfs-encrypt-creator = creator.__main__:main
